Create rule-extractor module